# urgent-care-at-home

./: .gitignore  README.md  SPECIALIZED_NURSES.md  TEST_REPORT.md  pyproject.toml  requirements.txt
agent/: settings.py  signature.py  triage_agent.py
dataset/: cases_chf_nurse.json  cases_ed_nurse.json  cases_general_nurse.json  cases_gi_nurse.json  cases_mental_health_nurse.json  cases_neuro_nurse.json  cases_ob_nurse.json  cases_pediatric_nurse.json  cases_preop_nurse.json  cases_respiratory_nurse.json  generator.py  nurse_roles.py  specialized_generator.py
deployment/: api.py  export.py  specialized_api.py
examples/: basic_triage.py
optimization/: compile.py  compile_specialized.py  optimizer.py
protocols/: parser.py
scripts/: verify_setup.py
validation/: edge_cases.py  test_agent.py
